Testing bindings with reactfx